# Symmetricality

./: .clang-format  .gitignore  Blueprint.cpp  Blueprint.h  Building.cpp  Building.h  BuildingFacet.cpp  BuildingFacet.h  CMakeLists.txt  Configurable.cpp  Configurable.h  DesignationFacet.cpp  DesignationFacet.h  Floornable.cpp  Floornable.h  Hud.cpp  Hud.h  PlanFacet.cpp  PlanFacet.h  PlanRenderer.cpp  PlanRenderer.h  README.md  RadialMenu.cpp  RadialMenu.h  Symmetricality.json  Symmetricality.pot  Symmetry.cpp  Symmetry.h  SymmetryFacet.cpp  circle.yml  install_dep.sh  main.cpp  tinyfiledialogs.c  tinyfiledialogs.h  utilities.hpp
assets/: sprite_sheet.xcf
json/: json.h
src/: Blueprint.cpp  Blueprint.h  Building.cpp  Building.h  BuildingFacet.cpp  DesignationFacet.cpp  DesignationFacet.h  Hud.cpp  PlanFacet.h  PlanRenderer.cpp  PlanRenderer.h  RadialMenu.cpp  RadialMenu.h  Symmetry.cpp  SymmetryFacet.h  city.cc  city.h  jsoncpp.cpp  main.cpp  utilities.hpp
src/json/: json-forwards.h
