cmake_minimum_required(VERSION 3.2)
project(Symmetricality)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
set(SOURCE_FILES main.cpp Blueprint.cpp Blueprint.h Building.cpp Building.h)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#set(CMAKE_BUILD_TYPE DEBUG)

find_package(SFML 2 REQUIRED graphics system window )
add_executable(Symmetricality ${SOURCE_FILES} PlanRenderer.cpp PlanRenderer.h utilities.hpp Symmetry.cpp Symmetry.h city.cc city.h Hud.cpp Hud.h tinyfiledialogs.h tinyfiledialogs.c)
target_link_libraries(Symmetricality ${SFML_LIBRARIES})
configure_file(LinLibertine_DRah.ttf LinLibertine_DRah.ttf COPYONLY)
configure_file(Symmetricality.pot Symmetricality.pot COPYONLY)
configure_file(assets/sprite_sheet.png buildings.png COPYONLY)